# ffmpeg-studty

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: 01_example_scanning.cpp  02_example_demuxing.cpp  03_example_remuxing.cpp  04_example_decoding.cpp  05_example_filtering.cpp  hello.cpp
